# schmiede

./: .gitignore  Cargo.toml  flake.nix
schmiede-cli/: Cargo.toml
schmiede-cli/src/: data_types.rs  exporters.rs  generate.rs  init.rs  main.rs  template.rs  transformers.rs
schmiede-cli/templates/: api.rs.templ  db.up.sql.templ  model.rs.templ  page.rs.templ
src/: attribute.rs  config.rs  crud.rs  data_types.rs  exporters.rs  generate.rs  init.rs  main.rs  template.rs  transformers.rs
src/add/: mod.rs
src/add/database/: diesel.rs  mod.rs  sqlx.rs
src/generate/: attribute.rs  crud.rs  data_types.rs  exporters.rs  mod.rs  options.rs  template.rs  transformers.rs
starters/axum/: Cargo.toml  dev-compose.yml
starters/axum/configuration/: base.yaml
starters/axum/src/: lib.rs  main.rs  startup.rs
starters/axum/src/config/: mod.rs
starters/axum/src/routes/: mod.rs
starters/axum_diesel/: .env.local  Cargo.toml  dev-compose.yml
starters/axum_diesel/configuration/: base.yaml  local.yaml
starters/axum_diesel/src/: lib.rs  startup.rs
starters/axum_diesel/src/api/: mod.rs
starters/axum_diesel/src/common/: context.rs  mod.rs  models.rs  response.rs
starters/axum_diesel/src/config/: app.rs  mod.rs
starters/axum_diesel_auth_admin/: Cargo.toml
starters/axum_diesel_auth_admin/configuration/: base.yaml
starters/axum_diesel_auth_admin/macros/src/: lib.rs
starters/axum_diesel_auth_admin/migrations/2024-03-02-142135_user/: up.sql
starters/axum_diesel_auth_admin/src/: lib.rs  main.rs  startup.rs
starters/axum_diesel_auth_admin/src/admin/: common.rs  login.rs  templates.rs
starters/axum_diesel_auth_admin/src/api/: helpers.rs
starters/axum_diesel_auth_admin/src/common/: context.rs  mod.rs  models.rs  response.rs
starters/axum_diesel_auth_admin/src/config/: app.rs  auth.rs  redis.rs
starters/axum_diesel_auth_admin/templates/: base.html  sidebar_items.html  sidebar_layout.html
starters/axum_diesel_auth_admin/templates/components/: upsert_form.html
starters/axum_diesel_auth_admin/templates/pages/: table.html
starters/axum_sqlx_auth_admin-frontend/: Cargo.toml
starters/axum_sqlx_auth_admin-frontend/macros/: Cargo.toml
starters/axum_sqlx_auth_admin-frontend/migrations/2024-03-09-094042_post/: up.sql
starters/axum_sqlx_auth_admin-frontend/src/: schema.rs
starters/axum_sqlx_auth_admin-frontend/src/admin/: middleware.rs  mod.rs  user.rs
starters/axum_sqlx_auth_admin-frontend/src/api/: middleware.rs  mod.rs  user.rs
starters/axum_sqlx_auth_admin-frontend/src/common/: traits.rs
starters/axum_sqlx_auth_admin-frontend/src/config/: database.rs
starters/axum_sqlx_auth_admin-frontend/templates/: login.html
starters/axum_sqlx_auth_admin-frontend/templates/components/: table.html
starters/axum_sqlx_auth_admin-frontend/templates/pages/: form.html
templates/: api.rs.templ  db.up.sql.templ  model.rs.templ
templates/add/database/: sqlx.rs.templ
templates/generate/api/: axum_diesel.rs.templ
templates/generate/db/diesel/: down.sql.templ
templates/generate/db/sqlx/: up.sql.templ
templates/generate/models/: dto.rs.templ  sqlx.rs.templ
