[package]
name = "schmiede-cli"
version = "0.1.0"
edition = "2021"
exclude = ["starters"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = "0.12.1"
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
convert_case = "0.6.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git2 = "0.18.3"
indicatif = "0.17.8"
serde = { version = "1.0.193", features = ["derive", "std"] }
toml = "0.8.12"
toml_edit = "0.22.11"
walkdir = "2.5.0"
