[package]
name = "axum-diesel-template"
version = "0.2.0"
edition = "2021"
authors = ["LeNei <leonmarc.neisskenwirth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4.1.2"
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
axum = { version = "0.7.4", features = ["tracing"] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "fs"] }
http = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
anyhow = "1.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
time = "0.3.34"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
