workspace = { members = ["macros"] }
[package]
name = "axum-diesel-template"
version = "0.2.0"
edition = "2021"
authors = ["LeNei <leonmarc.neisskenwirth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4.1.2"
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
axum = { version = "0.7.4", features = ["tracing"] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "fs"] }
http = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
anyhow = "1.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
time = "0.3.34"
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
base64 = "0.21.7"
redis = { version = "0.24.0", features = ["tokio-comp"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
macros = { path = "macros" }
convert_case = "0.6.0"
